--- a/src/styles/components/home/Tabs.css
+++ b/src/styles/components/home/Tabs.css
@@ -1,5 +1,5 @@
 .tabis{
-  margin-left: 100px;
+  margin-right: 4vh;
   width:1000px;
   border-radius: 80px;
   background-size: fit-content;
